--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ validatorHash = Scripts.validatorHash typedValidator
 writeContract :: IO ()
 writeContract = do
     let params = LockADAParams
-            { lockTime = 2 * 365 * 24 * 60 * 60 -- 2 years in seconds
+            { lockTime = (1 * 365 + 1*366) * 24 * 60 * 60 -- 2 years in seconds
             }
     writeValidator @LockADA
     printJson (validatorHash, params)
